--- a/receiptx.html
+++ b/receiptx.html
@@ -86,7 +86,7 @@
                 <!-- overview  -->
                 <div class="no-pad-col">
                     <div class="summary">
-                        <h2>Overview</h2>
+                        <p id="light-head">Overview</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                             Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
                             odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
@@ -99,8 +99,13 @@
                 <!-- role  -->
                 <div class="no-pad-col">
                     <div class="role">
-                        <h2>Role</h2>
-                        <p>User Research, Prototyping & Testing, Pitching, Product Stategy, Information Architecture, Android Development - ROLES I PLAYED IN</p>
+                        <div class="position">
+                            <p id="light-head">Role</p>
+                            <h3>App Developer, Scrum Master, UX Designer</h3>
+                            <p>User Research, Prototyping & Testing, Pitching, Product Stategy, Information Architecture, Android Development</p>
+                        </div>
+                        
+                        <p>August 2019 - May 2020</p>
                     </div>
                 </div>
             </div>
@@ -128,6 +133,13 @@
             <div class="col">
                 <div class="achievements">
                     <h1>Main Accomplishment</h1>
+                    <p>What is ReceiptX about, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                        In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                        at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                        consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                        
                     <ul>
                         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
                         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
