--- a/receiptx.html
+++ b/receiptx.html
@@ -555,7 +555,11 @@
     <!-- MORE PROJECTS  -->
     <div class="container">
         <p>More Projects</p>
-        <a href="hammer.html"><img id="hammer" src="images/ux/hammer/hammer.png" alt="Rhino Hammer"></a>
+        <div class="proj">
+            <a href="hammer.html"><img id="hammer" src="images/ux/hammer/hammer.png" alt="Rhino Hammer"></a>
+            <p>Rhino Hammer</p>
+        </div>
+        
     </div>
 
     <!-- FOOTER  -->
