--- a/receiptx.html
+++ b/receiptx.html
@@ -58,23 +58,10 @@
         </div>
     </div>
 
-    <!-- PROJECT IMAGE  -->
-    <div class="container">
-        <!-- Trigger the Modal -->
-        <img id="myImg" src="images/ux/receiptx/receiptx.PNG" alt="ReceiptX">
+    
 
-        <!-- The Modal -->
-        <div id="myModal" class="modal">
-
-            <!-- The Close Button -->
-            <span class="close">&times;</span>
-
-            <!-- Modal Content (The Image) -->
-            <img class="modal-content" id="img01">
-
-            <!-- Modal Caption (Image Text) -->
-            <div id="caption"></div>
-        </div>
+    <div class="banner">
+        <img id="banner-img" src="images/ux/receiptx/receiptx.png" alt="ReceiptX">
     </div>
 
     <!-- OVERVIEW -->
