--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                 <div class="col">
                     <h1>Contact</h1>
 
-                    <p>If you have any questions about me or just would like to have a conversation&#44; feel free to reach out!</p>
+                    <p>If you have any questions about me or just to chat&#44; feel free to reach out!</p>
 
                     <div class="contact-info">
                         <address>
