--- a/index.html
+++ b/index.html
@@ -494,19 +494,14 @@
         <p>Back to Top</p>
     </button>
     
+    <!-- FOOTER  -->
     <footer>
-        <div class="footer-container">
+        <div class="footer-container">  
             <section>
-                <address>
-                    <strong>Jeffrey Tran</strong><br>
-                    7619 Woodbine Ave&sbquo; Fort Wayne&sbquo; IN 46825
-                </address>
-                <p>(260) 797-8525</p>
-                <p><a href="mailto:jefftran.ux@gmail.com">jefftran.ux@gmail.com</a></p>
-            </section>
-            <section>
-                <a href="https://www.linkedin.com/in/jeffrey-tran-6547b212b/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                <a href="https://github.com/xjeffey" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
+                <h3>Let's connect</h3>
+                <p>Feel free to contact me with any questions!</p>
+                <a href="https://www.linkedin.com/in/jeffrey-tran-6547b212b/" target="_blank"><i id="footer-icon" class="fab fa-linkedin fa-3x"></i></a>
+                <a href="mailto:tranjeff@live.com"><i id="footer-icon" class="far fa-envelope fa-3x"></i></a>
             </section>
         </div>
     </footer>
