content for hammer

--- a/receiptx.html
+++ b/receiptx.html
@@ -91,7 +91,7 @@
                             <p>User Research, Prototyping & Testing, Pitching, Product Stategy, Information Architecture, Android Development</p>
                         </div>
                         
-                        <p>August 2019 - May 2020</p>
+                        <p>Fall 2019 - Spring 2020</p>
                     </div>
                 </div>
             </div>
