--- a/hammer.html
+++ b/hammer.html
@@ -79,6 +79,8 @@
                             In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
                             at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                             consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+
+                        <a href="#concept-demo">See Concept Video</a>
                     </div>
                 </div>
 
@@ -206,7 +208,7 @@
     <!-- PRODUCT VISION -->
     <div class="container-color">
         <div class="container">
-            <div class="vision">
+            <div class="vision" id="concept-demo">
                 <h1>The product vision</h1>
                 <p>what does our project highlight?, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
@@ -327,6 +329,8 @@
                     at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                     consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
             </div>
+
+            <a href="#concept-demo">See Concept Video</a>
         </div>
     </div>
     
