hammer stylin layout

--- a/receiptx.html
+++ b/receiptx.html
@@ -79,8 +79,8 @@
                             In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
                             at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                             consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
-
-                        <a href="#concept-demo">See Concept Video</a>
+                            
+                        <a href="#concept-demo"><p id="concept-vid">See Concept Video</p></a>
                     </div>
                 </div>
 
@@ -512,7 +512,7 @@
                     at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                     consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
 
-                <a href="#concept-demo">See Concept Video</a>
+                    <a href="#concept-demo"><p id="concept-vid">See Concept Video</p></a>
 
                 <!-- IMAGES  -->
                 <div class="topic-imgs">
