--- a/hammer.html
+++ b/hammer.html
@@ -80,7 +80,7 @@
                             at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                             consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
 
-                        <a href="#concept-demo">See Concept Video</a>
+                        <a href="#concept-demo"><p id="concept-vid">See Concept Video</p></a>
                     </div>
                 </div>
 
@@ -333,7 +333,7 @@
                     at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                     consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
 
-                <a href="#concept-demo">See Concept Video</a>
+                <a href="#concept-demo"><p id="concept-vid">See Concept Video</p></a>
             </div>
         </div>
     </div>
