--- a/receiptx.html
+++ b/receiptx.html
@@ -54,6 +54,8 @@
             <a href="index.html#about">About</a>
             <a class="icon"><i class="fa fa-bars menu-icon fa-2x"></i></a>
         </div>
+
+        <h1>Jeffrey Tran</h1>
     </div>
 
     <!-- BANNER IMAGE  -->
@@ -208,7 +210,7 @@
     <!-- PRODUCT VISION -->
     <div class="container-color">
         <div class="container">
-            <div class="vision" id="concept-demo">
+            <div class="vision">
                 <h1>The product vision</h1>
                 <p>what does our project highlight?, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
@@ -217,7 +219,7 @@
                     at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                     consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
 
-                <iframe src="https://www.youtube.com/embed/oj-bELa4va4" frameborder="0" allow="accelerometer; 
+                <iframe id="concept-demo" src="https://www.youtube.com/embed/oj-bELa4va4" frameborder="0" allow="accelerometer; 
                     autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
