--- a/receiptx.html
+++ b/receiptx.html
@@ -390,7 +390,7 @@
             <div class="proto-imgs">
                 <div class="proto-desc">
                     <div class="col">
-                        <img src="images/ux/receiptx/prototype-1.JPG" alt="Prototype Google Login" style="width: 100%;">
+                        <img src="images/ux/receiptx/prototype-1.JPG" alt="Prototype Google Login">
                     </div>
 
                     <div class="col">
@@ -408,7 +408,7 @@
 
                 <div class="proto-desc">
                     <div class="col">
-                        <img src="images/ux/receiptx/prototype-2.JPG" alt="Prototype Home Screen" style="width: 100%;">
+                        <img src="images/ux/receiptx/prototype-2.JPG" alt="Prototype Home Screen">
                     </div>
 
                     <div class="col">
@@ -426,7 +426,7 @@
 
                 <div class="proto-desc">
                     <div class="col">
-                        <img src="images/ux/receiptx/prototype-3.JPG" alt="Prototype Receipt Items" style="width: 100%;">
+                        <img src="images/ux/receiptx/prototype-3.JPG" alt="Prototype Receipt Items">
                     </div>
 
                     <div class="col">
@@ -444,7 +444,7 @@
 
                 <div class="proto-desc">
                     <div class="col">
-                        <img src="images/ux/receiptx/prototype-4.JPG" alt="Prototype Details" style="width: 100%;">
+                        <img src="images/ux/receiptx/prototype-4.JPG" alt="Prototype Details">
                     </div>
 
                     <div class="col">
@@ -462,7 +462,7 @@
 
                 <div class="proto-desc">
                     <div class="col">
-                        <img src="images/ux/receiptx/prototype-5.JPG" alt="Prototype Receipt Entry Options" style="width: 100%;">
+                        <img src="images/ux/receiptx/prototype-5.JPG" alt="Prototype Receipt Entry Options">
                     </div>
 
                     <div class="col">
@@ -480,7 +480,7 @@
 
                 <div class="proto-desc">
                     <div class="col">
-                        <img src="images/ux/receiptx/prototype-6.JPG" alt="Prototype User Profile" style="width: 100%;">
+                        <img src="images/ux/receiptx/prototype-6.JPG" alt="Prototype User Profile">
                     </div>
 
                     <div class="col">
