--- a/hammer.html
+++ b/hammer.html
@@ -32,7 +32,6 @@
         <div class="overlay-content">
             <a href="index.html#header">Home</a>
             <a href="index.html#projects">Projects</a>
-            <a href="index.html#process">Process</a>
             <a href="index.html#resume">Resume</a>
             <a href="index.html#about">About</a>
         </div>
@@ -49,7 +48,6 @@
         <div class="navbar" id="hamburgerNav">
             <a href="index.html">Home</a>
             <a href="index.html#projects">Projects</a>
-            <a href="index.html#process">Process</a>
             <a href="index.html#resume">Resume</a>
             <a href="index.html#about">About</a>
             <a class="icon"><i class="fa fa-bars menu-icon fa-2x"></i></a>
@@ -90,7 +88,7 @@
                         <div class="position">
                             <p id="light-head">Role</p>
                             <h3>UX Designer</h3>
-                            <p>User Research, Visual Design, Prototyping & Testing, Pitching</p>
+                            <p>User Research, Visual Design, Prototyping & Testing</p>
                         </div>
                         
                         <p>Spring 2018</p>
