--- a/receiptx.html
+++ b/receiptx.html
@@ -32,7 +32,6 @@
         <div class="overlay-content">
             <a href="index.html#header">Home</a>
             <a href="index.html#projects">Projects</a>
-            <a href="index.html#process">Process</a>
             <a href="index.html#resume">Resume</a>
             <a href="index.html#about">About</a>
         </div>
@@ -49,7 +48,6 @@
         <div class="navbar" id="hamburgerNav">
             <a href="index.html">Home</a>
             <a href="index.html#projects">Projects</a>
-            <a href="index.html#process">Process</a>
             <a href="index.html#resume">Resume</a>
             <a href="index.html#about">About</a>
             <a class="icon"><i class="fa fa-bars menu-icon fa-2x"></i></a>
@@ -89,7 +87,7 @@
                     <div class="role">
                         <div class="position">
                             <p id="light-head">Role</p>
-                            <h3>App Developer, Scrum Master, UX Designer</h3>
+                            <h3>Scrum Master, UX Designer, App Developer</h3>
                             <p>User Research, Prototyping & Testing, Pitching, Product Stategy, Information Architecture, Android Development</p>
                         </div>
                         
