--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
         <!-- navigation bar -->
         <div class="navbar" id="hamburgerNav">
             <a href="#header">Home</a>
-            <a href="#projects">Projects</a>
+            <div class="dropdown">
+                <a>Projects
+                    <i class="fa fa-caret-down"></i>
+                </a>
+                <div class="dropdown-content">
+                    <a href="receiptx.html">ReceiptX</a>
+                    <a href="hammer.html">Rhino Hammer</a>
+                  </div>
+            </div>
             <a href="#resume">Resume</a>
             <a href="#about">About</a>
             <a class="icon"><i class="fa fa-bars menu-icon fa-2x"></i></a>
