--- a/hammer.html
+++ b/hammer.html
@@ -47,7 +47,15 @@
         <!-- navigation bar -->
         <div class="navbar" id="hamburgerNav">
             <a href="index.html">Home</a>
-            <a href="index.html#projects">Projects</a>
+            <div class="dropdown">
+                <a>Projects
+                    <i class="fa fa-caret-down"></i>
+                </a>
+                <div class="dropdown-content">
+                    <a href="receiptx.html">ReceiptX</a>
+                    <a href="hammer.html">Rhino Hammer</a>
+                  </div>
+            </div>
             <a href="index.html#resume">Resume</a>
             <a href="index.html#about">About</a>
             <a class="icon"><i class="fa fa-bars menu-icon fa-2x"></i></a>
