--- a/hammer.html
+++ b/hammer.html
@@ -31,7 +31,8 @@
         <!-- Overlay content -->
         <div class="overlay-content">
             <a href="index.html#header">Home</a>
-            <a href="index.html#projects">Projects</a>
+            <a href="receiptx.html">ReceiptX</a>
+            <a href="hammer.html">Rhino Hammer</a>
             <a href="index.html#resume">Resume</a>
             <a href="index.html#about">About</a>
         </div>
