--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Jeff's Portfolio</title>
+    <title>Home</title>
 
     <!-- my styles  -->
     <link rel="stylesheet" href="css/index.css">
@@ -32,7 +32,8 @@
         <!-- Overlay content -->
         <div class="overlay-content">
             <a href="#header">Home</a>
-            <a href="#projects">Projects</a>
+            <a href="receiptx.html">ReceiptX</a>
+            <a href="hammer.html">Rhino Hammer</a>
             <a href="#resume">Resume</a>
             <a href="#about">About</a>
         </div>
@@ -42,10 +43,10 @@
         <a href="index.html">
             <img src="https://i.imgur.com/E2K4Cpc.png" alt="logo" class="logo">
         </a>
-        
+
         <!-- navigation bar -->
         <div class="navbar" id="hamburgerNav">
-            <a href="#header">Home</a>
+            <a href="index.html">Home</a>
             <div class="dropdown">
                 <a>Projects
                     <i class="fa fa-caret-down"></i>
@@ -55,8 +56,8 @@
                     <a href="hammer.html">Rhino Hammer</a>
                   </div>
             </div>
-            <a href="#resume">Resume</a>
-            <a href="#about">About</a>
+            <a href="index.html#resume">Resume</a>
+            <a href="index.html#about">About</a>
             <a class="icon"><i class="fa fa-bars menu-icon fa-2x"></i></a>
         </div>
 
