--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a href="#header">Home</a>
             <a href="receiptx.html">ReceiptX</a>
             <a href="hammer.html">Rhino Hammer</a>
+            <a id="test" href="">Test</a>
             <a href="#resume">Resume</a>
             <a href="#about">About</a>
         </div>
