--- a/hammer.html
+++ b/hammer.html
@@ -31,8 +31,15 @@
         <!-- Overlay content -->
         <div class="overlay-content">
             <a href="index.html#header">Home</a>
-            <a href="receiptx.html">ReceiptX</a>
-            <a href="hammer.html">Rhino Hammer</a>
+            <div class="overlay-dropdown">
+                <p id="projects-button">Projects
+                    <i class="fa fa-caret-down"></i>
+                </p>
+                <div class="overlay-dropdown-content">
+                    <a href="receiptx.html">ReceiptX</a>
+                    <a href="hammer.html">Rhino Hammer</a>
+                </div>
+            </div>
             <a href="index.html#resume">Resume</a>
             <a href="index.html#about">About</a>
         </div>
@@ -387,6 +394,6 @@
     </button>
 
     <!-- javascript -->
-    <script src="js/receipt.js"></script>
+    <script src="js/hammer.js"></script>
 </body>
 </html>
