--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
         <!-- Overlay content -->
         <div class="overlay-content">
             <a href="#header">Home</a>
-            <a href="receiptx.html">ReceiptX</a>
-            <a href="hammer.html">Rhino Hammer</a>
-            <a id="test" href="">Test</a>
+            <div class="overlay-dropdown">
+                <p id="projects-button">Projects
+                    <i class="fa fa-caret-down"></i>
+                </p>
+                <div class="overlay-dropdown-content">
+                    <a href="receiptx.html">ReceiptX</a>
+                    <a href="hammer.html">Rhino Hammer</a>
+                </div>
+            </div>
             <a href="#resume">Resume</a>
             <a href="#about">About</a>
         </div>
@@ -49,9 +55,9 @@
         <div class="navbar" id="hamburgerNav">
             <a href="index.html">Home</a>
             <div class="dropdown">
-                <a>Projects
+                <p>Projects
                     <i class="fa fa-caret-down"></i>
-                </a>
+                </p>
                 <div class="dropdown-content">
                     <a href="receiptx.html">ReceiptX</a>
                     <a href="hammer.html">Rhino Hammer</a>
