--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 
     <!-- my styles  -->
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/normalize.css">
-
-    <!-- W3 Schools -->
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 
     <!-- font awesome  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -261,6 +259,6 @@
     </footer>
     
     <!-- javascript -->
-    <script src="js/index.js"></script>
+    <script src="js/common-function.js"></script>
 </body>
 </html>
