--- a/receiptx.html
+++ b/receiptx.html
@@ -158,7 +158,6 @@
                 at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                 consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
         
-
             <!-- IMAGES  -->
             <div class="topic-imgs">
                 <figure id="research-fig">
@@ -530,17 +529,17 @@
                 <div class="topic-imgs">
                     <figure id="imp-fig">
                         <img src="https://i.imgur.com/O1KAQmW.jpg" alt="List of tasks" style="width: 100%;">
-                        <figcaption>List of tasks</figcaption>
+                        <figcaption>List of tasks to be completed during project</figcaption>
                     </figure>
 
                     <figure id="imp-fig">
                         <img src="https://i.imgur.com/vAqdIVe.jpg" alt="Task management" style="width: 100%;">
-                        <figcaption>Task management</figcaption>
+                        <figcaption>Tasks team members do each sprint</figcaption>
                     </figure>
 
                     <figure id="imp-fig">
                         <img src="https://i.imgur.com/cmiiSX7.jpg" alt="Burndown chart" style="width: 100%;">
-                        <figcaption>Burndown Chart</figcaption>
+                        <figcaption>Burndown chart to see how we are doing</figcaption>
                     </figure>
                 </div>
             </div>
