--- a/hammer.html
+++ b/hammer.html
@@ -360,6 +360,15 @@
                 In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
                 at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                 consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+
+            <p>Some key take aways from this project are that:</p>
+            
+            <ul>
+                <li><b>Have a plan.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li><b>Plans can alter.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li><b>Communication is key.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li><b>Understand the roles of each team member.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            </ul>
         </div>
     </div>
 
