--- a/receiptx.html
+++ b/receiptx.html
@@ -140,9 +140,13 @@
                     <ul>
                         <li><b>Turned an idea into a product.</b> The ability to turn a thought into something usable is a journey that is both exciting and rewarding. I worked with my team to shape
                         our end vision of ReceiptX. Although the product was just our capstone project, it was exciting to see how we grew as a team.</li>
-                        <li><b>Used sprints to indicate our progress.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                        <li><b>Experienced various roles.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                        <li><b>Adapted to the pandemic.</b> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                        <li><b>Applied sprints to demonstrate our progress.</b> My team and I applied the Scrum methodology to identify what we had accomplished and
+                        what we need to do for each sprint.</li>
+                        <li><b>Delivered the product on time.</b> Managing a team of people who do not know each other was not easy. I spent time to get to know the strengths
+                        and weaknesses of each person, allowing me to assign them tasks based on their skillset. As a result, the team was able to work
+                        together efficiently to complete the project on time.</li>
+                        <li><b>Adapted to the pandemic.</b> During the development phase of the project, our team had to adjust how we operated because one of the members could not
+                        work on the project anymore due to the pandemic.</li>
                     </ul>
                 </div>
             </div>
