--- a/hammer.html
+++ b/hammer.html
@@ -85,12 +85,14 @@
                 <div class="no-pad-col">
                     <div class="summary">
                         <p id="light-head">Overview</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        <p id="extra-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                             Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
                             odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
                             In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
                             at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                             consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                            
+                        <p>ReceiptX is a mobile application that helps self-motivated people streamline their monthly expenses by identifying and categorizing their spending habits.</p>
 
                         <a href="#concept-demo"><p id="concept-vid">See Concept Video</p></a>
                     </div>
