--- a/receiptx.html
+++ b/receiptx.html
@@ -85,7 +85,8 @@
                 <div class="no-pad-col">
                     <div class="summary">
                         <p id="light-head">Overview</p>
-                        <p id="extra-para">ReceiptX is a mobile application that helps self-motivated people streamline their monthly expenses by identifying and categorizing their spending habits.</p>
+                        <p id="extra-para">ReceiptX is a mobile application that helps self-motivated people streamline their monthly expenses by identifying and categorizing their financial habits,
+                            allowing them to cut back on spending.</p>
                         <p>This was a capstone project I did for my final year at Indiana University, where I spent most of my spare time working closely with 3 other peers to 
                             design and build our application.</p>
                         <a href="#concept-demo"><p id="concept-vid">See Concept Video</p></a>
@@ -115,23 +116,19 @@
                 <!-- background  -->
                 <div class="background-info">
                     <h1>Background</h1>
-                    <p>What is ReceiptX about, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                        In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                        at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                        consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                    <p>When people start their university journey, it will be the first time they will be living on their own. They have to be financially
+                        responsible to manage their expenses for school, room and board, and for personal reasons as well. It becomes clear that people lose
+                        their receipts after a purchase, making it hard for them to manage their finances.
+                    </p>
                 </div>
                 
                 <!-- accomplishment  -->
                 <div class="achievements">
                     <h1>ReceiptX received an A+ grade.</h1>
-                    <p>What is ReceiptX about, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                        In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                        at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                        consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                    <p>My instructors gave us full freedom to choose our team members and come up with an idea for a capstone project. I was in charge of
+                        UX and Development strategies for the team. It was a pleasure to go through this journey with my team members that allowed me to
+                        grow tremendously. Some of our key achievements listed below:
+                    </p>
                         
                     <ul>
                         <li><b>Turned an idea into a product.</b> The ability to turn a thought into something usable is a journey that is both exciting and rewarding. I worked with my team to shape
@@ -242,12 +239,7 @@
     <div class="container">
         <div class="market">
             <h1>What's on the market</h1>
-            <p>how did we come up with how project should look like, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+            <p>We wanted to see what people are seeking for in a receipt management application by reading their feedbacks online.</p>
 
             <!-- COMPETITION -->
             <div class="competitor">
