--- a/receiptx.html
+++ b/receiptx.html
@@ -384,12 +384,9 @@
     <div class="container">
         <div class="design">
             <h1>Designs</h1>
-            <p>what does our project look like - prototype, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+            <p>User testing was an iterative process that we conducted to identify biggest issues our prototype had. Once we gathered feedback,
+                we updated the mock-up and test again.
+            </p>
         
             <!-- IMAGES  -->
             <div class="proto-imgs">
