--- a/index.html
+++ b/index.html
@@ -199,10 +199,9 @@
             <h1>About</h1>
             <img src="https://i.imgur.com/nxnXT1r.jpg" alt="Self Image">
     
-            <p id="about-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                    In metus vulputate eu scelerisque felis imperdiet.</p>
+            <p id="about-desc">My name is Jeffrey Tran and I am interested in how the things I design and create can improve the lives of others. Currently, I am learning the design processes, concepts,
+                and theories through Indiana University to help me better my future projects. I am a big thinker who enjoys working on projects end to end, from an idea all to the way to development.
+            </p>
 
             <!-- VALUES -->
             <div class="values">
@@ -210,26 +209,21 @@
 
                 <div class="value">
                     <h3>There is always something new to learn.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                            In metus vulputate eu scelerisque felis imperdiet.</p>
+                    <p>As people get older, they learn various skills to add to their tool box. Outside of class projects, I enjoy watching videos, reading blogs, and
+                        website tutorials to help me improve my future work.
+                    </p>
                 </div>
 
                 <div class="value">
-                    <h3>It is okay to not be perfect.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                            In metus vulputate eu scelerisque felis imperdiet.</p>
+                    <h3>It is okay to fail.</h3>
+                    <p>People are not perfect by any means. Just like how people learn skills to add to their tool box, they learn what they should not put in there as well.
+                        We make mistakes along the way to help us grow as a person.</p>
                 </div>
 
                 <div class="value">
                     <h3>Be humble.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                            In metus vulputate eu scelerisque felis imperdiet.</p>
+                    <p>It does not matter if you are the best at what you do, give respect to others because we are all human beings facing our own problems with the similar wants and needs. 
+                        Treat others like how you would want to be treated.</p>
                 </div>
             </div>
         </div>
