--- a/index.html
+++ b/index.html
@@ -199,8 +199,11 @@
             <h1>About</h1>
             <img src="https://i.imgur.com/nxnXT1r.jpg" alt="Self Image">
     
-            <p id="about-desc">My name is Jeffrey Tran and I am interested in how the things I design and create can improve the lives of others. Currently, I am learning the design processes, concepts,
-                and theories through Indiana University to help me better my future projects. I am a big thinker who enjoys working on projects end to end, from an idea all to the way to development.
+            <p id="about-desc">My name is Jeffrey Tran and I am interested in how my designs and creations can improve the lives of others. I enjoy meeting different people as I get to hear their thoughts,
+                helping me think of new ideas to share with the world.</p>
+
+            <p id="about-desc">I am learning more about the design processes, concepts, and theories at Indiana University to help me improve my current and future work. In addition, I am a big thinker who enjoys
+                working on projects end to end, from an idea all the way to development.
             </p>
 
             <!-- VALUES -->
