--- a/receiptx.html
+++ b/receiptx.html
@@ -173,16 +173,17 @@
                 </figure>
             </div>
 
-            <p id="extra-para">After listening to my peers, we saw their main issues:</p>
-            <ul>
-                <li><b>Managing receipts is a hassle.</b> The ability to turn a thought into something usable is a journey that is both exciting and rewarding. I worked with my team to shape
-                our end vision of ReceiptX. Although the product was just our capstone project, it was exciting to see how we grew as a team.</li>
-                <li><b>Many places to place a receipt.</b> My team and I applied the Scrum methodology to identify what we had accomplished and
-                what we need to do for each sprint.</li>
-                <li><b>No reason to keep receipts.</b> Managing a team of people who do not know each other was not easy. I spent time to get to know the strengths
-                and weaknesses of each person, allowing me to assign them tasks based on their skillset. As a result, the team was able to work
-                together efficiently to complete the project on time.</li>
-            </ul>
+            <div class="research-insight">
+                <p id="extra-para">After listening to my peers, we saw their main issues:</p>
+
+                <ul>
+                    <li><b>No reason to keep receipts.</b> People find it unneccessary to keep receipts because they have no use for it, other than to
+                    return an item. This prevents them from tracking their expenses in the future if they need reference the information.</li>
+                    <li><b>Managing receipts is a hassle.</b> Receipts can be stored anywhere convienent, making it hard for people to organize their information.
+                        This prevents people from locating a specific receipt if they need to use it.</li>
+                </ul>
+            </div>
+            
         </div>
         
     </div>
@@ -192,12 +193,9 @@
         <div class="container">
             <div class="persona">
                 <h1>User personas</h1>
-                <p>how did I create the project with users in mind?, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                    odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                    In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                    at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                    consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                <p>Based on our research, we wanted our product to solve the problem for current college students (Persona 1) and postgraduates (Persona 2).
+                    We decided to focus on current college students because we had a better chance of contacting the target group since we were on a campus.
+                </p>
 
                 <!-- IMAGES  -->
                 <div class="topic-imgs">
@@ -217,12 +215,11 @@
     <div class="container">
         <div class="statement">
             <h1>Defining the problem statement</h1>
-            <p>What is the issue I found during my reseach?, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+            <p id="extra-para">After gaining insight from our research, my team and I worked together to define our target group's problem.</p>
+
+            <h3>Problem statement:</h3>
+
+            <p>something here</p>
         </div>
     </div>
 
